added assets and sidebar in html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="sidebar">
+            <div class="container-item">
+                <img src="assets/sidebar/view-dashboard.svg" alt="dashboard icon">
+                <p>Dashboard</p>
+            </div>
+            <div>
+                <div class="container-item">
+                    <img src="assets/sidebar/home.svg" alt="home icon">
+                    <p>Home</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/card-account-details.svg" alt="home icon">
+                    <p>Profile</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/message-reply.svg" alt="message icon">
+                    <p>Messages</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/clock-time-eight.svg" alt="time icon">
+                    <p>History</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/file-document.svg" alt="file icon">
+                    <p>Tasks</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/account-group.svg" alt="a group of people icon">
+                    <p>Communities</p>
+                </div>
+            </div>
+            <div>
+                <div class="container-item">
+                    <img src="assets/sidebar/cog.svg" alt="setting icon">
+                    <p>Settings</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/help-circle.svg" alt="help icon">
+                    <p>Support</p>
+                </div>
+                <div class="container-item">
+                    <img src="assets/sidebar/shield-account.svg" alt="shield account icon">
+                    <p>Privacy</p>
+                </div>
+
+            </div>
+            
+        </div>
+        <div id="main-content">
+        </div>
+    </div>
 </body>
 </html>
